# MQQStatusTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  config.toml  queue_managers.txt  queue_status.csv  run.ps1  run.sh
output/: queue_status_20260212_235028.csv
src/: main.cpp  mq_advanced_features.h  mq_args.h  mq_config.h  mq_config_toml.h  mq_configuration.h  mq_connection.h  mq_csv_writer.h  mq_dynamic_queue.h  mq_log.h  mq_logger.h  mq_operations.h  mq_pcf_handler.h  mq_pcf_queue_enumerator.h  mq_pcf_status.h  mq_pcf_status_inquirer.h  mq_queue_lister.h  mq_queue_status.h  mq_text_file_processor.h  mq_thread_pool.h  mq_utilities.h
